istio-config/archive/istio-cb-fac-error-detection.yaml
#see https://istio.io/latest/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fac-circuit-breaker-outlier
spec:
  host: micronautfactorialservice
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 30s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
