istio-config/archive/istio-cb-spring-fac-error-detection.yaml
#see https://istio.io/latest/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: spring-fac-circuit-breaker-outlier
spec:
  host: springfactorialservice
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 30s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
