istio-config/archive/ncr-cb-fac-max-connection.yaml
#see https://istio.io/latest/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: micronautncrservice-circuit-breaker
spec:
  host: micronautncrservice
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 10
